typeorm init in main module

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,10 @@
 #  REFRESH_TOKEN_TTL=2592000 # 30d (seconds)
 #  BCRYPT_OR_ARGON_MEMORY=65536 # argon2 params if desired
 #  TOTP_ISSUER=BharatERP
+
+# DB_HOST=''
+# DB_NAME=''
+# DB_USERNAME=''
+# DB_PASSWORD=''
+# DB_SSLMODE='require'
+# DB_CHANNELBINDING='require'
